--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "audiophile-e-commerce-website",
-  "homepage": "https://mercysitienei.github.io/audiophile",
+  "homepage": "https://mercysitienei.github.io/audiophile-ecommerce",
   "private": true,
   "version": "0.0.0",
   "type": "module",
